logo size decreased width is 100% instead of 450% and gap is fixed

--- a/src/main/frontend/src/home/home.scss
+++ b/src/main/frontend/src/home/home.scss
@@ -16,7 +16,7 @@ body {
 }
 
 .logo-container {
-  width: 250%;
+  width: 100%;
   margin-left: 2%;
   z-index: 3;
 }
@@ -25,7 +25,7 @@ body {
   color: rgba(255, 255, 255, 0.941);
   margin: 2%;
   font-size: 25px;
-  margin-left: 8%;
+  margin-left: 5%;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -55,6 +55,7 @@ body {
 .search-container {
   display: flex;
   flex-direction: column;
+
   padding: 2%;
   padding-right: 25%;
 }
@@ -151,8 +152,8 @@ body {
   z-index: 7;
   justify-content: center;
   margin-left: 3%;
-  align-items: center;
-  gap: 900px;
+  align-items: flex-start;
+  gap: 9px;
 }
 
 .background-image {
